Implemented attribute value normalization, and added a parser option to enable/disable it. Namespace URIs are now always normalized.
Refactored the FAXPP_Buffer object so that it now contains it's own
FAXPP_BufferResizeCallback and user data, instead of needing them as
parameters.

Fixed a bug in entity output in the examples.

--- a/TODO
+++ b/TODO
@@ -1,8 +1,17 @@
-Attribute value normalization (especially needed for namespace resolution)
+Small tasks
+-----------
+
+Normalize whitespace in attribute values
+Normalize line endings in element character content / PI values / comment values
+Accept XML 1.1 line endings as whitespace
 Handle "xml" namespace properly
 xml:space value checking
 Error for redefining "xml" namespace
 Error for defining "xmlns" namespace
+
+Large tasks
+-----------
+
 Entity expansion framework
 DTD internal subset parsing
 DTD external subset parsing
