--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Small tasks
 -----------
 
+Don't accept Namespace 1.1 undefines in XML 1.0 mode
 Normalize line endings in element character content / PI values / comment values
 Accept XML 1.1 line endings as whitespace
 Handle "xml" namespace properly
