Added windows project files to todo list

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Small tasks
 -----------
 
+Windows project files
 Normalize line endings in element character content / PI values / comment values
 Accept XML 1.1 line endings as whitespace
 
